--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "webpack": "^4.16.4",
     "webpack-cli": "^3.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "file-loader": "^1.1.11",
+    "url-loader": "^1.0.1"
+  },
   "scripts": {
-    "build" : "webpack",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
