--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "copy-webpack-plugin": "^4.5.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "url-loader": "^1.0.1",
     "ts-loader": "^4.4.2",
     "typescript": "^3.0.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.16.4",
     "webpack-cli": "^3.1.0"
   },
